# calc_date

./: .gitignore  README.md  __init__.spec  gitignore  pyproject.toml
src/: __main__.py  cli.py  datevar.py  gui.py  settings.toml  todo.md
src/date_calc/: MANIFEST.in  __init__.py  __main__.py  _version.py  cli.py  config.py  exceptions.py  runner.py
src/date_calc/gui/: __init__.py  dtpicker.py  frame_data_interval.py  frame_date_difference.py  tlevel.py  twindow.py
src/date_calc/gui/utils/: grid_layout.py
src/date_calc/locale/en/LC_MESSAGENS/: app.po
src/date_calc/locale/en_US/: app.po
src/date_calc/locale/pt_BR/LC_MESSAGENS/: app.mo  app.po
src/date_calc/locale/pt_BR/LC_MESSAGES/: app.mo  app.po
src/date_calc/log/: __init__.py  logger.conf.json  setup_logger.py
src/date_calc/translate/: __init__.py  compile.py  raises.py  translate.py
src/date_calc/utils/: date_calculator.py  develop_mesage.py
src/gui/: __init__.py  frame_data_interval.py  frame_date_difference.py  twindow.py
tests/: test_date_calculator.py  test_parser.py  test_settings.py
