[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "date_calc"
version = "0.1.0"
description = "Auxiliary program to calculate difference between dates and dates and interval of days."
authors = [
    { name = "Erik Marques", email = "lucro.alternativo@outlook.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "rich==14.0.0",
    "rich-argparse==1.7.1",
    "dateparse (>=1.4.0,<2.0.0)",
    "ttkbootstrap (>=1.14.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

[project.scripts]
dtcalc = "src.__main__:main"

[project.gui-scripts]
dtcalc-gui = "src.gui.__init__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry]
package-mode = false
include = ["tests/*"]