[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "date_calc"
description = "Auxiliary program to calculate difference between dates and dates and interval of days."
authors = [
    { name = "Erik Marques", email = "lucro.alternativo@outlook.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "rich==14.0.0",
    "rich-argparse==1.7.1",
    "dateparse (>=1.4.0,<2.0.0)",
    "ttkbootstrap (>=1.14.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[project.scripts]
dtcalc = "src.__main__:main"

[project.gui-scripts]
dtcalc-gui = "src.gui.__init__:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

[tool.poetry]
package-mode = true
include = ["tests/*"]
version = "2.1.0"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"