[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[project]
name = "date-calc"
description = "Auxiliary program to calculate difference between dates and dates and interval of days."
authors = [
    { name = "Erik Marques", email = "lucro.alternativo@outlook.com" }
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "rich==14.0.0",
    "rich-argparse==1.7.1",
    "dateparse (>=1.4.0,<2.0.0)",
    "ttkbootstrap (>=1.14.2,<2.0.0)",
    "python-dateutil (>=2.9.0.post0,<3.0.0)",
    "pystray (>=0.19.5,<0.20.0)",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dynamic = ["version"]

[project.scripts]
dtcalc = "date_calc.__main__:main"
dtcalc-gui = "date_calc.gui.__init__:main"


[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
polib = "^1.2.0"

[tool.poetry]
package-mode = true
include = ["tests/*", "src/assets"]
packages = [
    {include="date_calc", from = "src"}
]
version = "2.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"